--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,11 @@
-# ----------------------- #
-#      Main Configs       #
-# ----------------------- #
-
-url: https://www.bonaval.de
-title: BonaVal.de | Kostenloser Pfandkreditvergleich
-email: info@bonaval.de
-author: BonaVal.de
-description: BonVal ist Ihr fairer, unabhängiger und kostenloser Vergleich von Pfandkrediten. Finden sie den besten Pfandkredit mit BonaVal.
-
-# ----------------------- #
-#    Jekyll & Plugins     #
-# ----------------------- #
+# Site settings
+title: Bonaval
+description: "Bonaval"
+baseurl: "/Bonaval" 
+url: "http://jatinderapex.github.io/Bonaval" 
+tagline: "Apexure Software Solutions"
 
 # Build settings
 markdown: kramdown
-permalink: pretty
 
-# ----------------------- #
-#   3rd Party Settings    #
-# ----------------------- #
-
-# gems:
-#   - jekyll-sitemap
-
-# social:
-#   - title: twitter
-#     url: https://twitter.com/SBootstrap
-#   - title: github
-#     url: https://github.com/IronSummitMedia/startbootstrap
-#   - title: linkedin
-#     url:
+highlighter: rouge
